<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_help"
        android:checkable="false"
        android:icon="@drawable/ic_outline_help"
        android:title="@string/help"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_goBack"
        android:checkable="false"
        android:icon="@drawable/ic_arrow_back"
        android:title="@string/goBack"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_goForward"
        android:checkable="false"
        android:icon="@drawable/ic_arrow_forward"
        android:title="@string/goForward"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
